ingress-deploy.yaml
# ============================================================
# Ingress Controller - Deployment YAML
# ============================================================
# Namespace: ingress (create first with ingress-namespace.yaml)
# Name: ingress-controller
# Image: nginx-ingress-controller:v1.14.0
# Service Type: NodePort
# PVC: logs (StorageClass: nfs-subdir-external-sc)
# ============================================================

---
# 0. Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    name: ingress
    
---
# 8. Service (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller
  namespace: ingress
  labels:
    app: ingress-controller
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: ingress-controller
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      # nodePort: 32133  # Uncomment to specify fixed NodePort
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      # nodePort: 32740  # Uncomment to specify fixed NodePort
  selector:
    app: ingress-controller
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-controller
    app.kubernetes.io/name: ingress-controller
    release: ingress-controller

---
# 9. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
  namespace: ingress
  labels:
    app: ingress-controller
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-controller
    app.kubernetes.io/name: ingress-controller
    release: ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-controller
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-controller
      app.kubernetes.io/name: ingress-controller
      release: ingress-controller
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ingress-controller
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-controller
        app.kubernetes.io/name: ingress-controller
        release: ingress-controller
    spec:
      serviceAccountName: ingress-controller
      terminationGracePeriodSeconds: 300
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ingress-controller
          image: scr.comm.scp-in.com/score-scpapps/nginx-ingress-controller:v1.14.0
          imagePullPolicy: IfNotPresent
          args:
            - /nginx-ingress-controller
            - --election-id=ingress-controller-leader-ingress-controller-ingress
            - --configmap=$(POD_NAMESPACE)/ingress-controller
            - --controller-class=k8s.io/ingress-controller
            - --ingress-class=nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            runAsUser: 101
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - mkdir -p /var/log/k8s-ingress/$(hostname) && ln -sf /var/log/k8s-ingress/$(hostname)/access.log /var/log/nginx/access.log && ln -sf /var/log/k8s-ingress/$(hostname)/error.log /var/log/nginx/error.log
            preStop:
              exec:
                command:
                  - /wait-shutdown
          volumeMounts:
            - name: logs
              mountPath: /var/log/k8s-ingress
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: logs

---
# 10. IngressClass (for Kubernetes 1.18+)
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  labels:
    app: ingress-controller
  # Uncomment to set as default IngressClass
  # annotations:
  #   ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-controller
